# PDFMaestro

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: CONTRIBUTING.md  INSTALL.md  USAGE.md
pdfmaestro/: __init__.py  __main__.py  annotation.py  annotation_overlay.py  annotations.py  config.py  dialogs.py  main_window.py  operations.py  page_manager.py  search.py  signature.py  toc.py  viewer.py
scripts/: install_pdfmaestro.sh
src/: annotationoverlay.cpp  annotationoverlay.h  annotations.cpp  annotations.h  config.cpp  config.h  dialogs.cpp  dialogs.h  main.cpp  mainwindow.cpp  mainwindow.h  operations.cpp  operations.h  pagemanager.cpp  pagemanager.h  pdfviewer.cpp  pdfviewer.h  searchbar.cpp  searchbar.h  settingsdialog.cpp  settingsdialog.h  signaturedialog.cpp  signaturedialog.h  toc.cpp  toc.h
tests/: CMakeLists.txt  helpers.h  tst_annotations.cpp  tst_config.cpp  tst_operations.cpp  tst_stamp.cpp
