[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfmaestro"
version = "0.1.0"
description = "Unified PDF viewer, annotator, and page arranger"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "pikepdf>=8.0",
    "pypdfium2>=4.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-qt", "ruff"]

[project.scripts]
pdfmaestro = "pdfmaestro.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
pdfmaestro = ["../data/**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
